--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
         <div id="top-wrapper" class="top-wrapper">
             <section id="visualizer" class="visualizer"></section>
             <section id="tracks-pane" class="tracks-pane">
-                <ul id="track-list" class="track-list"></ul>
+                <ol id="track-list" class="track-list"></ol>
             </section>
         </div>
         <div id="bottom-wrapper" class="bottom-wrapper">
             <div id="waveform" class="waveform"></div>
-            <section id="now-playing" class="now-playing">Now Playing - 0:00</section>
+            <div id="playing-text" class="playing-text">
+                <span id="now-playing" class="now-playing">Now Playing - </span>
+                <span id="duration" class="duration">0:00 / 0:00</span>
+            </div>
             <section id="controls" class="controls">
                 <button id="prev-btn" class="prev-btn">
                     <i class="fas fa-step-backward"></i>
