--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
                 <span id="duration" class="duration">0:00 / 0:00</span>
             </div>
             <section id="controls" class="controls">
-                <button id="prev-btn" class="prev-btn" onclick="handleSkipBack()">
-                    <i class="fas fa-step-backward"></i>
-                </button>
-                <button id="play-btn" class="play-btn" onclick="handlePlayPause()">
-                    <i class="fas fa-play"></i>
-                </button>
-                <button id="stop-btn" class="stop-btn" onclick="handleStop()">
-                    <i class="fas fa-stop"></i>
-                </button>
-                <button id="next-btn" class="next-btn" onclick="handleSkipForward()">
-                    <i class="fas fa-step-forward"></i>
-                </button>
+                <div class="button-wrap">
+                    <button id="prev-btn" class="prev-btn" onclick="handleSkipBack()">
+                        <i class="fas fa-step-backward"></i>
+                    </button>
+                    <button id="play-btn" class="play-btn" onclick="handlePlayPause()">
+                        <i class="fas fa-play"></i>
+                    </button>
+                    <button id="stop-btn" class="stop-btn" onclick="handleStop()">
+                        <i class="fas fa-stop"></i>
+                    </button>
+                    <button id="next-btn" class="next-btn" onclick="handleSkipForward()">
+                        <i class="fas fa-step-forward"></i>
+                    </button>
+                </div>
                 <div class="volume-slider">
                     <input type="range" min="0" max="1" value="0.75" step=".01" id="volume" class="volume" onchange="handleVolume()">
                 </div>
