--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
             </section>
         </div>
     </div>
+    <script src="https://unpkg.com/wavesurfer.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
