mobile sizing adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
                     <i class="fas fa-chevron-left" onclick="handleBackNav()"></i>
                     <span id="nav-title" class="nav-title">Albums</span>
                 </div>
-                <section id="tracks-pane" class="tracks-pane">
+                <div id="tracks-pane" class="tracks-pane">
                     <ol id="track-list" class="track-list"></ol>
-                </section>
+                </div>
             </div>
         </div>
         <div id="bottom-wrapper" class="bottom-wrapper">
