--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="mobile-warning" class="mobile-warning">
         <i class="far fa-times-circle close-icon" onclick="closeWarning()"></i>
-        Mobile Users: Use the play/pause button to initiate the first track you select. Mobile devices do not allow auto-play. After the inital track, clicking track names will auto-play as normal.
+        Mobile Users: Use the play/pause button to initiate the first track you select. Some mobile devices do not allow auto-play. After the inital track, clicking track names will auto-play as normal.
     </div>
     <div id="container" class="container">
         <div id="top-wrapper" class="top-wrapper">
